--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<table width="100%">
 				<tr>
 					<td colspan=2>
-						<h2>Алексей Н</h2>
+						<h2>Алексей Носов</h2>
 						Россия, Новочеркасск<br><br>
 						<a href="Tel:+79085075857">Тел: +7 (908) 507-58-57</a><br><br>
 						<a href="mailto:alexeijavadev@gmail.com">AlexeiJavaDev@gmail.com</a><br><br>
