--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 			<table width="100%">
 				<tr>
 					<td colspan=2>
-						<h2>Алексей Носов</h2>
-						Россия, Новочеркасск<br><br>
+						<h2>Алексей </h2>
+						Россия, <br><br>
 						<a href="Tel:+79085075857">Тел: +7 (908) 507-58-57</a><br><br>
 						<a href="mailto:alexeijavadev@gmail.com">AlexeiJavaDev@gmail.com</a><br><br>
 						<a href="https://github.com/Alexei84-08/">Аккаунт GitHub</a><br><br>
